@@ -1,3 +1,11 @@
+2010-03-02  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/std/bitset (_Base_bitset<>::_M_getdata()): Add.
+	(hash<_GLIBCXX_STD_D::bitset<_Nb>>): Add, use the latter.
+	* include/debug/bitset (hash<std::__debug::bitset<_Nb>>): Add.
+	* include/profile/bitset (hash<std::__profile::bitset<_Nb>>): Likewise.
+	* testsuite/23_containers/bitset/hash/1.cc: New.
+
 2010-03-02  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	PR libstdc++/43183
